# PythonProject

./: .coverage  .env.example  .gitignore  README.md  main.py  mylog.txt  pyproject.toml  requirements.txt
data/: operations.json
htmlcov/: .coverage  class_index.html  function_index.html  index.html  status.json  z_145eef247bfb46b6___init___py.html  z_145eef247bfb46b6_bank_operations_py.html  z_145eef247bfb46b6_decorators_py.html  z_145eef247bfb46b6_external_api_py.html  z_145eef247bfb46b6_generators_py.html  z_145eef247bfb46b6_logging_config_py.html  z_145eef247bfb46b6_main_py.html  z_145eef247bfb46b6_masks_py.html  z_145eef247bfb46b6_processing_py.html  z_145eef247bfb46b6_utils_py.html  z_145eef247bfb46b6_widget_py.html  z_a44f0ac069e85531___init___py.html  z_a44f0ac069e85531_conftest_py.html  z_a44f0ac069e85531_test_bank_operations_py.html  z_a44f0ac069e85531_test_decorators_py.html  z_a44f0ac069e85531_test_external_api_py.html  z_a44f0ac069e85531_test_generators_py.html  z_a44f0ac069e85531_test_masks_py.html  z_a44f0ac069e85531_test_processing_py.html  z_a44f0ac069e85531_test_reading_files_py.html  z_a44f0ac069e85531_test_utils_py.html  z_a44f0ac069e85531_test_widget_py.html
src/: bank_operations.py  decorators.py  external_api.py  generators.py  logging_config.py  main.py  masks.py  mylog.txt  pd_config.py  processing.py  reading_files.py  utils.py  widget.py
tests/: conftest.py  test_bank_operations.py  test_decorators.py  test_external_api.py  test_generators.py  test_masks.py  test_pd_config.py  test_processing.py  test_reading_files.py  test_utils.py  (+1 more)
