[tool.poetry]
name = "my_new_project"
version = "0.1.0"
description = "Банковские операции"
authors = ["Alexej Matsenko"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.14"
poetry-core = ">=2.0.0,<2.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.group.lint.dependencies]
flake8 = ">=7.3.0,<8.0.0"
black = ">=26.1.0,<27.0.0"
mypy = ">=1.19.1,<2.0.0"
isort = ">=7.0.0,<8.0.0"

[tool.poetry.group.dev.dependencies]
requests = ">=2.32.5,<3.0.0"

[project]
# ...
[project.scripts]
my-script = "my_module:main"

[tool.isort]
line_length = 119

[tool.black]
line-length = 119
exclude = '''
(
  /(\.git)  # Исключить папку .git
)
'''

[tool.mypy]
disallow_untyped_defs = true
warn_return_any = true
exclude = 'venv'