[project]
name = "pythonproject"
version = "0.1.0"
description = ""
authors = [
    {name = "Алексей Маценко",email = "matsenko.alexej@yandex.ru"}
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.lint.dependencies]
flake8 = "^7.3.0"
black = "^26.1.0"
mypy = "^1.19.1"
isort = "^7.0.0"


[tool.poetry.group.dev.dependencies]
pytest-cov = "^7.0.0"
pytest = "^9.0.2"
requests = "^2.32.5"
